# Proyecto_Etica_y_Seguridad

./: .env.example  .gitignore  Contexto.md  README.md  setup.sh  subir_a_github.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 93ea5a51b955_initial_schema_from_9_3_4.py
backend/app/: config.py  main.py
backend/app/audit/: logger.py
backend/app/dp/: comparison_precomputed.json  data.py  model.py  precompute_comparison.py  queries.py
backend/app/models/: __init__.py  asignacion.py  audit_log.py  campania.py  cliente.py  consentimiento.py  permiso.py  resultado_contacto.py  rol.py  rol_permiso.py  usuario.py
backend/app/routers/: asignaciones.py  auditoria.py  auth.py  campanias.py  clientes.py  consentimientos.py  dp.py  usuarios.py
backend/app/schemas/: asignaciones.py  auditoria.py  campanias.py  clientes.py  consentimientos.py  dp.py  usuarios.py
backend/app/security/: crypto.py  hashing.py  jwt.py  lockout.py  masking.py  rbac.py
backend/app/seed/: generate_synthetic.py  load_bank_csv.py
backend/tests/: test_asignaciones.py  test_audit_logger.py  test_auditoria_router.py  test_auth.py  test_campanias.py  test_clientes.py  test_consentimientos.py  test_crypto.py  test_dp.py  test_hashing.py  test_lockout.py  test_masking.py  test_models.py  test_rbac.py  test_seed_generation.py  test_usuarios.py
docs/: ANALISIS_INICIAL.md  GUIA_OPERATIVA.md  GUION_DEMO_WEB.md  INFORME_FINAL.md  INFORME_FINAL.tex
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
(+34 files in other folders)
