[project]
name = "bank-campaigns-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.3",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "faker>=25.0",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
