[project]
name = "bank-campaigns-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.3",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.8",
    "cryptography>=42.0",
    "faker>=25.0",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
    "diffprivlib>=0.6,<0.7",
    "scikit-learn==1.4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27", "pytest-cov>=5.0"]
notebook = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "notebook>=7.0",
    "nbclient>=0.10",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
